Removed overflow bug from checkbox

--- a/main.css
+++ b/main.css
@@ -34,7 +34,8 @@ p{
     justify-content: center;
     border-radius: 50%;
     position: relative;
-    transition: transform 0.5 ease;
+    transition: transform 0.5s ease;
+    overflow: hidden;
 }
 
 .toggle-theme:hover,
@@ -78,7 +79,7 @@ p{
 
 .container.dark{
     background: rgb(0,17,29);
-    color: #fafafa
+    color: #fafafa;
 }
 
 .container.dark p{
